// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly for edit locations: alias field 1`] = `
<input
  class="ant-input css-dev-only-do-not-override-12jzuas"
  id="location-form_alias"
  placeholder="Alias"
  type="text"
  value="creepTown"
/>
`;

exports[`renders correctly for edit locations: name field 1`] = `
<input
  aria-required="true"
  class="ant-input css-dev-only-do-not-override-12jzuas"
  id="location-form_name"
  placeholder="Enter a location name"
  type="text"
  value="area51"
/>
`;

exports[`renders correctly for new locations: alias field 1`] = `
<input
  class="ant-input css-dev-only-do-not-override-12jzuas"
  id="location-form_alias"
  placeholder="Alias"
  type="text"
  value=""
/>
`;

exports[`renders correctly for new locations: name field 1`] = `
<input
  aria-required="true"
  class="ant-input css-dev-only-do-not-override-12jzuas"
  id="location-form_name"
  placeholder="Enter a location name"
  type="text"
  value=""
/>
`;
